# raisim-visualizer-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: codex_integration_guide.md  modularization_plan.md  tester_contract.md
examples/: bolt_wrench_visual_eval.yaml  generic_recording.yaml  generic_tester.yaml
src/raisim_visualizer_manager/: __init__.py  cli.py  config.py  discord.py  process.py  recording.py  unity.py
tests/: test_cli.py  test_config.py  test_discord.py
